--- a/web_client/index.html
+++ b/web_client/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div style="width: 500px">
-    <canvas id="myChart1" width="400" height="400"></canvas>
+    <canvas id="cpuBarChart" width="400" height="400"></canvas>
   </div>
 
 <script src="client.js"></script>
